--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,9 +1,7 @@
 name: Download and Release Lua
 
 on:
-  push:
-    tags:
-      - 'v*'  # Триггер на создание тега (например v1.0)
+  workflow_dispatch:
 
 jobs:
   release-lua:
