--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,7 +11,7 @@ jobs:
         run: |
           curl -LO https://www.lua.org/ftp/lua-5.5.0.tar.gz
           sha256sum lua-5.5.0.tar.gz > checksum.txt  # Опционально: создание checksum
-          mv lua-5.5.0.tar.gz lua-5.5.0
+          cp lua-5.5.0.tar.gz lua-5.5.0
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
