--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,18 +9,22 @@ jobs:
     steps:
       - name: Download Lua 5.5.0
         run: |
-          curl -LO https://www.lua.org/ftp/lua-5.5.0.tar.gz
-          sha256sum lua-5.5.0.tar.gz > checksum.txt  # Опционально: создание checksum
-          cp lua-5.5.0.tar.gz lua-5.5.0
-
+          curl -L https://www.lua.org/ftp/lua-5.5.0.tar.gz | tar xz
+      - uses: actions/checkout@v4
+      - name: Git
+        run: |
+          cd lua-5.5.0
+          git config user.name "GitHub Actions Bot"
+          git config user.email "<>"
+          git add . 
+          git commit -m "lua-5.5.0" 
+          git push
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            lua-5.5.0
             lua-5.5.0.tar.gz
-            checksum.txt  # Опционально: включение checksum
-          tag_name: ${{ github.ref_name }}
-          name: "Lua 5.5.0 Release 2"
+          name: "Lua 5.5.0 Release"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
