--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -7,14 +7,15 @@ jobs:
   release-lua:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Git
+      - name: Get lua
         run: |
-          sleep 10
+          sleep 20
           curl -L https://www.lua.org/ftp/lua-5.5.0.tar.gz | tar xz
           ls
           cd lua-5.5.0
-          ls
+      - uses: actions/checkout@v4
+      - name: Git
+        run: |
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
           git pull
