--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -7,16 +7,13 @@ jobs:
   release-lua:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - name: Get lua
         run: |
           sleep 20
           curl -L https://www.lua.org/ftp/lua-5.5.0.tar.gz | tar xz
-          ls
-          cd lua-5.5.0
-      - uses: actions/checkout@v4
-      - name: Git
-        run: |
-          ls
+          mv lua-5.5.0/* .
+          rm -r lua-5.5.0
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
           git pull
